# number-to-thai-translator

./: README.md  manage.py  pyproject.toml
number_to_thai_translator/: settings.py  urls.py  wsgi.py
